# Hello_Wolrd_

./: CMakeLists.txt  README.md
headers/: credits.h  end.h  include.h  load_save.h  mastermind.h  menu.h  newgame.h  option.h  quit.h  read_intro.h  scratch.h  volume.h
sources/: credits.c  end.c  load_save.c  main.c  mastermind.c  menu.c  newgame.c  option.c  quit.c  read_intro.c  scratch.c  volume.c
texts/: dialogues.txt  mastermind.txt  tuto.txt
